<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_general_rate_button">Rate in Google Play</string>
    <string name="about_general_subtext">Identified and Reported Telemarketing and sales calls.</string>
    <string name="about_general_title">General</string>
    <string name="about_settings_app_features">App features</string>
    <string name="about_settings_do_not_sell">Do not sell my personal information</string>
    <string name="about_settings_faq">FAQ</string>
    <string name="about_settings_legal">Legal notices</string>
    <string name="about_settings_privacy_center">Privacy center</string>
    <string name="about_settings_private_policy">Privacy policy</string>
    <string name="about_settings_support">Support</string>
    <string name="about_settings_version">App version</string>
    <string name="account_basic">Basic</string>
    <string name="account_downgrade_cancel">No, keep Scam Shield Premium</string>
    <string name="account_downgrade_confirm">Yes, downgrade my account</string>
    <string name="account_downgrade_desc">You’ll no longer be able to manage your blocked numbers, send call types to voicemail, perform reverse number lookup, or have voicemails texted to you.</string>
    <string name="account_downgrade_title">Are you sure you want to downgrade your account?</string>
    <string name="account_end_trial_fail">We are unable to end your trial at this time. Please try again later. If this error persists, please visit</string>
    <string name="account_error_processing_add">Your subscription cannot be completed at this time. Please try again later. If this error persists, please visit</string>
    <string name="account_error_processing_cancel">Your subscription cannot be canceled at this time. Please try again later. If this error persists, please visit</string>
    <string name="account_error_processing_trial">We are unable to start your trial at this time. Please try again later. If this error persists, please visit</string>
    <string name="account_inactive">Inactive</string>
    <string name="account_ineligble_card_text">"Not the primary account holder?
To add Scam Shield to your device, please contact your primary account holder and visit My T-Mobile."</string>
    <string name="account_my_sprint">My Sprint</string>
    <string name="account_my_sprint_url">https://sprint.com/login</string>
    <string name="account_my_tmobile">My T-Mobile</string>
    <string name="account_my_tmobile_url">https://my.t-mobile.com</string>
    <string name="account_name_id_plus_subtitle">Scam Shield provides caller ID and unlimited reverse number lookup. You can block likely scam calls and see what kind of organization is calling you. And with call management, you can:</string>
    <string name="account_name_id_start_trial">Start trial</string>
    <string name="account_nameid">Active</string>
    <string name="account_no_data">No cellular data connection. Please check your network settings.</string>
    <string name="account_pending">Pending…</string>
    <string name="account_premium">Premium</string>
    <string name="account_screenit">Screen-It</string>
    <string name="account_subscribe_warning">Charges will appear on your wireless bill or be deducted from Pre-Paid account (applicable taxes and fees included on tax-inclusive rate plans, or additional on other plans)</string>
    <string name="account_subscription_check_fail">We are unable to complete your subscription. Please select the refresh icon to try again. If this message persists, please go to settings and select the support option.</string>
    <string name="account_subscription_expired">Your subscription expired</string>
    <string name="account_trial_check_fail_dialog_subtitle">We are unable to activate your Scam Shield trial. For more information please visit your My account screen.</string>
    <string name="account_trial_check_fail_dialog_title">Scam Shield trial</string>
    <string name="account_trial_check_fail_notification">Scam Shield 30 day free trial update</string>
    <string name="account_type_label">T-Mobile ID</string>
    <string name="account_upgrade_loading">Processing…</string>
    <string name="action_clear_cache">Clear T-Mobile ID Agent Cache</string>
    <string name="action_load_defaults_lab">Load lab defaults</string>
    <string name="action_load_defaults_prod">Load production defaults</string>
    <string name="action_save">Save</string>
    <string name="activity_filter_dialog_all">All incoming calls</string>
    <string name="activity_filter_dialog_approved">Favorites</string>
    <string name="activity_filter_dialog_blocked">Blocked calls</string>
    <string name="activity_filter_dialog_blocked_messages">Blocked messages</string>
    <string name="activity_filter_dialog_voicemail">Sent to voicemail</string>
    <string name="activity_list_empty">"There's no call activity to show right now."</string>
    <string name="activity_manage_dialog_block">Block</string>
    <string name="activity_manage_dialog_title">Manage %1$s</string>
    <string name="activity_message_list_empty">You have no message activity to display.</string>
    <string name="activity_messages_banner_text">Subscribe to manage and block messages</string>
    <string name="activity_no_more_items">No more activity to display</string>
    <string name="activity_permissions_call_log">Call Log</string>
    <string name="activity_permissions_contacts">Contacts</string>
    <string name="activity_permissions_needed_subtitle_in_app">Scam Shield requires additional permissions to provide optimal functionality. Select Allow access to view and accept these permissions.</string>
    <string name="activity_permissions_needed_subtitle_out_of_app">Scam Shield requires the following permissions to function optimally. %1$sSelect Allow access below to go to settings/app permissions to allow these permissions.</string>
    <string name="activity_permissions_needed_title">Permissions required</string>
    <string name="activity_toast_approved">Number added to favorites.</string>
    <string name="activity_toast_blocked">Number added to block list.</string>
    <string name="activity_toast_blocked_message">Number added to block messages list.</string>
    <string name="app_onboarding_options_feature_1">Scam ID and Scam Block</string>
    <string name="app_onboarding_options_feature_2">Scam Reporting</string>
    <string name="app_onboarding_options_feature_3">Caller ID</string>
    <string name="app_onboarding_options_feature_4">Favorites (never blocked!)</string>
    <string name="app_onboarding_options_feature_5">Manage your blocked numbers</string>
    <string name="app_onboarding_options_feature_6">Send call types to voicemail</string>
    <string name="app_onboarding_options_feature_7">Perform reverse number lookup</string>
    <string name="app_onboarding_options_feature_8">Get voicemails texted to you*</string>
    <string name="app_onboarding_options_header_1">Feature</string>
    <string name="app_onboarding_options_header_2">Premium</string>
    <string name="app_onboarding_options_header_3">Free</string>
    <string name="caller_image_content_description">Caller Image</string>
    <string name="con_desc_contact_image">Contact Image Icon</string>
    <string name="con_desc_contact_initial">Contact initial Icon</string>
    <string name="con_desc_eula_header">Welcome to your ultimate call control center</string>
    <string name="eula_agreement">"By using Scam Shield, you agree to the
"<a href="https://www.t-mobile.com/responsibility/legal/scam-shield-app-terms-of-use">Scam Shield Terms &amp; Conditions</a></string>
    <string name="eula_agreement_content_description">By continuing you agree to our End User License Agreement. Link to end users license agreement</string>
    <string name="eula_welcome">"The Scam Shield app lets you easily manage your anti-scam features, so you can identify, block, and report likely scam calls, plus label numbers as Favorites.

And everything is saved on our network, so your settings will stay, even if you remove the app or get a new phone."</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_check_mark">Check Mark</string>
    <string name="general_subscribe">Subscribe</string>
    <string name="general_update">Update</string>
    <string name="get_started">Get started</string>
    <string name="manage_dialog_allow">Always allow</string>
    <string name="manage_dialog_block_calls">Block calls</string>
    <string name="manage_dialog_block_messages">Block messages</string>
    <string name="manage_dialog_call_management">Call management</string>
    <string name="manage_dialog_message_management">Message management</string>
    <string name="manage_dialog_voicemail">Send to voicemail</string>
    <string name="metro_confirm_pin">Add Scam Shield</string>
    <string name="metro_forgot_pin">Your 8 digit pin was established at activation. Forgot your pin?</string>
    <string name="metro_pin_contact_my_metro">Contact My Metro</string>
    <string name="metro_pin_enter_hint">PIN Number</string>
    <string name="metro_pin_error_input">Please enter a valid 8 digit PIN and try again.</string>
    <string name="metro_pin_header">Please enter your 8 digit PIN</string>
    <string name="metro_pin_sub_header_subscribe">In order to complete your Metro Scam Shield purchase, please enter your 8 digit billing PIN.</string>
    <string name="nameid_icon_desc">Scam Shield icon</string>
    <string name="onboarding_options_begin_trial">Start my Premium trial</string>
    <string name="onboarding_options_skip">Maybe later</string>
    <string name="onboarding_options_trial_header_1">Scam Shield Premium</string>
    <string name="onboarding_options_trial_header_2">Free for 30 days with NO automatic renewal</string>
    <string name="premium_trial_details">"Your trial will end automatically if you choose not to keep it, and you can continue enjoying the free version of the Scam Shield app.

If you choose to continue Scam Shield Premium, the charge is $4 a month per line.

*Download the Visual Voicemail app to take advantage of additional features"</string>
</resources>