<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:tag="layout/activity_onboarding_options_0" android:background="@color/black_or_deep_purple" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/activity_onboarding_options" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/magenta_or_royal_purple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/onboarding_options_trial_header_1" android:lineSpacingExtra="4.0sp" android:textAlignment="center" android:layout_marginStart="15.0dip" android:layout_marginEnd="14.0dip" />
        <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onboarding_options_trial_header_2" android:lineSpacingExtra="4.0sp" android:textAlignment="center" android:layout_marginStart="15.0dip" android:layout_marginEnd="14.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="24.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="10.0sp" android:textColor="@color/magenta_or_royal_purple" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/app_onboarding_options_header_1" android:textAllCaps="true" android:letterSpacing="0.1" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/app_onboarding_options_feature_1" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/app_onboarding_options_feature_2" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/app_onboarding_options_feature_3" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/app_onboarding_options_feature_4" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/app_onboarding_options_feature_5" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/app_onboarding_options_feature_6" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/app_onboarding_options_feature_7" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/app_onboarding_options_feature_8" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="12.0dip">
                <TextView android:textSize="10.0sp" android:textColor="@color/magenta_or_royal_purple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/app_onboarding_options_header_2" android:textAllCaps="true" android:letterSpacing="0.1" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="10.0sp" android:textColor="@color/magenta_or_royal_purple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/app_onboarding_options_header_3" android:textAllCaps="true" android:letterSpacing="0.1" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="28.0dip" android:src="@drawable/ic_check_circle" android:contentDescription="@string/general_check_mark" />
            </LinearLayout>
        </LinearLayout>
        <Button android:textStyle="bold" android:layout_gravity="center" android:id="@id/onboarding_options_begin_trial_button" android:background="@drawable/bg_rounded_button_background" android:layout_width="175.0dip" android:layout_height="46.0dip" android:text="@string/onboarding_options_begin_trial" android:textAllCaps="false" android:backgroundTint="@color/magenta_or_royal_purple" style="@style/PinkOnWhiteButtonTheme" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/onboarding_options_skip_button" android:paddingTop="16.0dip" android:paddingBottom="14.0dip" android:focusable="true" android:clickable="true" android:layout_width="175.0dip" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/onboarding_options_skip" android:textAlignment="center" />
        <com.tmobile.services.nameid.ui.NameIDTextView android:textSize="13.0sp" android:textColor="@color/grey_a" android:id="@id/visual_voicemail_download_requirement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="26.0dip" android:text="@string/premium_trial_details" android:textAlignment="center" />
    </LinearLayout>
</ScrollView>