<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/activity_manage_dialog_root_container" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="76.0dip" app:cardBackgroundColor="@color/grey_9" app:cardCornerRadius="0.0dip">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/manage_dialog_constraint_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:id="@id/manage_dialog_relative_layout" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginTop="17.0dip" android:layout_marginStart="17.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <de.hdodenhof.circleimageview.CircleImageView android:id="@id/manage_dialog_circle_image_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/con_desc_contact_image" />
                <ImageView android:id="@id/manage_dialog_initials_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:tint="@color/grey_white" android:contentDescription="@string/caller_image_content_description" app:srcCompat="@drawable/circle" />
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/black_2" android:id="@id/manage_dialog_initials_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:contentDescription="@string/con_desc_contact_initial" />
            </RelativeLayout>
            <TextView android:textSize="16.0sp" android:textStyle="normal" android:textColor="@color/white" android:id="@id/manage_dialog_caller_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:lineSpacingExtra="8.0sp" android:layout_marginStart="15.0dip" app:layout_constraintStart_toEndOf="@id/manage_dialog_relative_layout" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="13.0sp" android:textStyle="normal" android:textColor="@color/white" android:id="@id/manage_dialog_caller_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lineSpacingExtra="3.0sp" app:layout_constraintStart_toStartOf="@id/manage_dialog_caller_name" app:layout_constraintTop_toBottomOf="@id/manage_dialog_caller_name" />
            <com.tmobile.services.nameid.ui.NameIDButton android:textSize="16.0sp" android:textStyle="bold" android:id="@id/activity_manage_update_button" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/general_update" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/UncoloredButtonStyle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="11.0dip" android:layout_marginBottom="10.0dip" android:text="@string/manage_dialog_call_management" android:fontFamily="sans-serif-medium" android:layout_marginStart="16.0dip" />
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" app:srcCompat="@drawable/horizontal_line_1dp" />
    <CheckBox android:textSize="16.0sp" android:id="@id/manage_dialog_checkbox_block_calls" android:paddingLeft="23.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/manage_dialog_block_calls" android:layout_marginStart="12.0dip" />
    <CheckBox android:textSize="16.0sp" android:id="@id/manage_dialog_checkbox_voicemail" android:paddingLeft="23.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/manage_dialog_voicemail" android:layout_marginStart="12.0dip" />
    <CheckBox android:textSize="16.0sp" android:id="@id/manage_dialog_checkbox_allow" android:paddingLeft="23.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/manage_dialog_allow" android:layout_marginStart="12.0dip" />
    <TextView android:id="@id/manage_dialog_message_section_title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/manage_dialog_message_management" android:fontFamily="sans-serif-medium" android:layout_marginStart="16.0dip" />
    <ImageView android:id="@id/manage_dialog_message_section_rule" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:srcCompat="@drawable/horizontal_line_1dp" />
    <CheckBox android:textSize="16.0sp" android:id="@id/manage_dialog_checkbox_block_messages" android:paddingLeft="23.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="20.0dip" android:text="@string/manage_dialog_block_messages" android:layout_marginStart="12.0dip" />
</LinearLayout>