<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/activity_eulapage" android:background="@color/black_or_deep_purple" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="16.0dip" app:layout_constraintBottom_toTopOf="@id/button_get_started" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/feature_display_icon" android:layout_width="wrap_content" android:layout_height="@dimen/shield_icon_height_startup" android:layout_marginTop="@dimen/eula_app_icon_top_margin" android:src="@drawable/ic_shield_filled_big" android:contentDescription="@string/nameid_icon_desc" />
            <ImageView android:id="@id/activity_eulapage_image_product" android:layout_width="@dimen/eula_header_width" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:src="@drawable/ic_eula_header" android:contentDescription="@string/con_desc_eula_header" />
            <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/activity_eulapage_welcome_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="31.0dip" android:layout_marginBottom="8.0dip" android:text="@string/eula_welcome" android:lineSpacingExtra="8.0dip" android:textAlignment="center" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" />
        </LinearLayout>
    </ScrollView>
    <com.tmobile.services.nameid.ui.NameIDButton android:textSize="16.0sp" android:textStyle="bold" android:id="@id/button_get_started" android:background="@drawable/bg_rounded_button_background" android:layout_width="163.0dip" android:layout_height="48.0dip" android:layout_marginBottom="@dimen/eula_bottom_element_margin" android:text="@string/get_started" android:backgroundTint="@color/magenta_or_gold_orange" app:layout_constraintBottom_toTopOf="@id/textview_agreement_line_2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <com.tmobile.services.nameid.ui.NameIDTextView android:textSize="12.0sp" android:textColor="@color/pale_gray_or_white_6" android:textColorLink="@color/pale_gray_or_white_6" android:gravity="center" android:id="@id/textview_agreement_line_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/eula_bottom_element_margin" android:text="@string/eula_agreement" android:lineSpacingExtra="10.0dip" android:contentDescription="@string/eula_agreement_content_description" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>