<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="?colorPrimary" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:minHeight="?actionBarSize" android:layout_alignParentTop="true" android:title="@string/general_subscribe" android:contentDescription="" android:elevation="8.0dip" app:layout_scrollFlags="enterAlways|scroll" app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" app:theme="@style/ThemeOverlay.AppCompat.Dark" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/metro_pin_cancel" android:layout_below="@id/toolbar" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/pin_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/metro_pin_header" android:lineSpacingExtra="8.0sp" android:contentDescription="@string/metro_pin_header" android:textIsSelectable="true" android:textAlignment="center" />
        <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="@color/black" android:id="@id/pin_subtext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/metro_pin_sub_header_subscribe" android:lineSpacingExtra="6.0sp" android:contentDescription="@string/metro_pin_sub_header_subscribe" android:textIsSelectable="true" android:textAlignment="center" />
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/FloatingPinHintStyle" android:id="@id/input_layout_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <EditText android:gravity="center" android:id="@id/metro_pin_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/metro_pin_enter_hint" android:inputType="number" android:contentDescription="@string/metro_pin_enter_hint" android:textCursorDrawable="@null" android:textAlignment="gravity" style="@style/EnterPinStyle" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:textColor="@color/report_red" android:id="@id/metro_pin_error_input" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/metro_pin_error_input" android:contentDescription="@string/metro_pin_error_input" />
        <com.tmobile.services.nameid.ui.NameIDButton android:textSize="15.199982sp" android:textStyle="bold" android:id="@id/metro_pin_confirm_button" android:background="@drawable/bg_rounded_button_background" android:layout_width="164.0dip" android:layout_height="48.0dip" android:layout_marginTop="28.0dip" android:text="@string/metro_confirm_pin" android:contentDescription="@string/metro_confirm_pin" android:textAllCaps="false" android:elevation="5.0dip" android:backgroundTint="@color/magenta_or_royal_purple" />
        <TextView android:textSize="12.0sp" android:textStyle="normal" android:textColor="#ff8a8a8a" android:gravity="center_horizontal" android:id="@id/forgot_pin_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/metro_forgot_pin" android:contentDescription="@string/metro_forgot_pin" android:textIsSelectable="true" android:textAlignment="center" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" />
        <com.tmobile.services.nameid.ui.NameIDButton android:textSize="14.0sp" android:textStyle="normal" android:textColor="@color/magenta_or_royal_purple" android:gravity="center" android:id="@id/metro_pin_call_metro" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/metro_pin_contact_my_metro" android:contentDescription="@string/metro_pin_contact_my_metro" android:textAllCaps="false" />
    </LinearLayout>
    <com.tmobile.services.nameid.ui.NameIDButton android:textSize="16.0sp" android:textStyle="normal" android:textColor="@color/grey1" android:gravity="center" android:id="@id/metro_pin_cancel" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/general_cancel" android:layout_alignParentBottom="true" android:contentDescription="@string/metro_pin_contact_my_metro" android:textAllCaps="false" android:fontFamily="sans-serif-medium" />
</RelativeLayout>